--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,3 +2,7 @@
   service: 
     name: vsftpd
     state: restarted
+- name: restart firewalld
+  service: 
+    name: firewalld
+    state: restarted
