updated variable name to username from name

--- a/test_vsftp.yml
+++ b/test_vsftp.yml
@@ -15,7 +15,7 @@
     vsftpd_groups:
       - test
     vsftpd_users:
-      - name: test1
+      - username: test1
         comment: 'test1 user'
         groups:
           - test
