--- a/test_vsftp.yml
+++ b/test_vsftp.yml
@@ -16,10 +16,10 @@
       - test
     vsftpd_users:
       - name: test1
-        gecos: test1 user
+        #gecos: test1 user
         groups:
           - test
-        passwd: testpassword
+        password: testpassword
         shell: /sbin/nologin
         
     
