updated password var

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -44,7 +44,7 @@
     shell: "{{ item.shell| default('/bin/bash') }}"
     #createhome: "{{ item.homedir }}"
     groups: "{{ item.groups| join(',') }}"
-    password: "{{ item.password| password_hash('sha512') }}"
+    password: "{{ item.password }}"
   with_items: vsftpd_users
   when: vsftpd_users is defined
   
