--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -38,6 +38,16 @@
   when: vsftpd_groups is defined
 
 - name: create the users
+  user:
+    name: "{{ item['key'] }}"
+    password: "{{ item['value']['password'] }}"
+    shell: "{{ item['value']['shell']|default (omit) }}"
+    comment: "{{ item['value']['comment']|default (omit) }}"
+    groups: "{{ item[value]['groups']| join(',') }}"
+    state: "{{ item['value']['state'] }}"
+  with_items: vsftpd_users
+  when: vsftpd_users is defined
+'''  
   user: 
     name: "{{ item.name }}"
     comment: "{{ item.comment }}"
@@ -47,7 +57,7 @@
     password: "{{ item.password }}"
   with_items: vsftpd_users
   when: vsftpd_users is defined
-  
+'''  
 - name: define ftp shares
   file:
     state: directory
