--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,10 +3,10 @@
 #The default ftp directory where your shares will be placed
 vsftpd_shares_root: '/var/ftp/shares'
 #List ftp shares that need to be created
-vsftpd_shares: {}
+vsftpd_shares: []
 # users to create with nologin
-vsftpd_users: {}
+vsftpd_users: []
   
 # user group to create with nologin
-vsftpd_groups: {}
+vsftpd_groups: []
   
