--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,6 +9,7 @@
 - name: Configure firewall to allow FTP service
   firewalld:
     service: ftp
+    port: 20-21/tcp
     permanent: true
     state: enabled
   notify: restart firewalld
