--- a/tests/test.yml
+++ b/tests/test.yml
@@ -2,7 +2,7 @@
 - hosts: localhost
   connection: local
   roles:
-    - { name: vsftpd_server } 
+    - { role: "{{ lookup('env', 'TRAVIS_REPO_SLUG') | basename }}" } #Gets only the repository name
   
   vars:
     vsftpd_shares_root: '/var/ftp/shares'
